--- a/Readme
+++ b/Readme
@@ -5,6 +5,9 @@ To create a compelling and insightful Power BI dashboard using Sample Superstore
 ## 🛠️ Tools Used
 * Microsoft Power BI
 * Sample Superstore Dataset (fictional business data)
+## 🖼️ Dashboard Screenshot
+
+![Dashboard](Screenshot%202025-08-06%20161234.png)
 
 ## 📊 Key Visuals in the Dashboard
 * 📈 **Profit Trend (Year & Quarter)**
